infrastructure/charts/prometheus-community/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingressroute
  namespace: prometheus
spec:
  entryPoints: []
    # If not specified, HTTP routers will accept requests from all EntryPoints in the list of default EntryPoints.
    # - web
    # - websecure
  routes:
    - match: Host(`prometheus.poddle.uz`)
      kind: Rule
      services:
        - name: prometheus-server
          port: 80
  # tls:
  #   secretName: wildcard-poddle-uz-tls-secret
